tests/src/frontend/expand/invalid/bad_global_class_const.sk
class Foo {
  const .x : String = "bad";
}
